--- a/src/config.json
+++ b/src/config.json
@@ -1,5 +1,5 @@
 {
     "prefix": "//",
-    "token": "ODE3MDAyMzQwNzk1MTU0NDgy.YEDKuQ.d-Aoe6Yf8pa6Z6j8XSWBtQD8bTc",
+    "token": "",
     "owner_id": "195239730428903426"
 }
